<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/padding">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formTagLine"
                android:textSize="@dimen/large_text"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="@dimen/padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formCondition"
                android:textSize="@dimen/normal_text"
                android:padding="@dimen/padding"
                android:textColor="@color/pd"/>
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/ageHint"
                 android:inputType="number"
                 android:maxLength="2"
                 android:digits="0123456789"
                 android:textSize="@dimen/normal_text"
                 android:padding="@dimen/padding"/>
         </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/go_to_form"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/p"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/go_to_form"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>