<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.abhishek.swasthabharat_p.BookAppointment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@drawable/cust_back">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/padding"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginTop="@dimen/card_view_y">
                <LinearLayout
                    android:id="@+id/name_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_name_container">
                    <TextView
                        android:id="@+id/drName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/name"
                        android:textSize="@dimen/normal_text"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/qualification"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/qual"
                        android:textSize="@dimen/small_text"
                        android:textColor="@color/light_black" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_below="@+id/name_container">
                    <TextView
                        android:id="@+id/specialization"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:text="@string/spec"
                        android:textSize="@dimen/small_text"
                        android:textColor="@color/light_black"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/myAdd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/address"
                        android:textStyle="bold"
                        android:textColor="@color/pd"/>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/open"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:layout_alignParentEnd="true"
                            android:text="@string/open"
                            android:textSize="@dimen/small_text"
                            android:textColor="@color/green"
                            android:visibility="invisible"/>
                        <TextView
                            android:id="@+id/closed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:layout_alignParentEnd="true"
                            android:text="@string/closed"
                            android:textSize="@dimen/small_text"
                            android:textColor="@color/red"
                            android:visibility="visible"/>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:src="@drawable/usericon1"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/image_y"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <CalendarView
            android:id="@+id/calender"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.87">
        </CalendarView>
        <Button
            android:id="@+id/bookAppBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.13"
            android:background="@drawable/cust_back"
            android:text="@string/bookApp"
            android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
