<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/H1"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/cust_back"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Et_mobileNo"
                    android:padding="@dimen/padding"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:maxLength="10"
                    android:outlineProvider="none"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:layout_marginBottom="@dimen/padding">
                    <Button
                        android:id="@+id/loginBtn"
                        android:layout_width="@dimen/btnSize"
                        android:layout_height="@dimen/btnSize"
                        android:layout_centerInParent="true"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/normal_text"
                        android:background="@drawable/cust_btn"/>
                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="invisible"/>
                </RelativeLayout>

            </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
